# MulticutImageCompression

./: .gitignore  CMakeLists.txt  README.md
final-presentation/: batch.py  compare-2.ipynb  compare.ipynb  compare_aspy.py  data-jpeg.csv  data-jpeg2000.csv  data-multicut.csv  data-webp.csv  distribution.ipynb  improvements.ipynb  improvements_color.ipynb  make_multicut_samples.ipynb  mintest.ipynb  test.ipynb
include/codecs/: codec.h  context_encoder.h  ensemble.h  mean_codec.h  multicut_aware_codec.h  multicut_codec.h  train.h  unionfind.h
include/coding/: arithmetic.h  huffman.h
include/core/: bitstream.h  compressed_image.h  diagnostics.h  encode_utils.h  header.h  multicut.h  multicut_image.h  optimizer.h  testing.h  timing.h  util.h
intermediate-presentation/: compare_revisited.ipynb  compare_single.ipynb  crop.ipynb  make_samples.ipynb  make_samples_v2.ipynb
lib/Reference-arithmetic-coding/cpp/: BitIoStream.hpp
python_bindings/: mlcv_py.pyi
src/: ensemble_main.cpp  main.cpp
src/bindings/: pybindings.cpp
src/core/: header.cpp  multicut_aware_codec.cpp  multicut_codec.cpp
src/ensemble/: ensemble.cpp  train.cpp
src/util/: timing.cpp  util.cpp
